@@ -1,4 +1,5 @@
 com.sun.jersey.impl.model.method.dispatch.VoidVoidDispatchProvider
 com.sun.jersey.impl.model.method.dispatch.HttpReqResDispatchProvider
+com.sun.jersey.impl.model.method.dispatch.FormDispatchProvider
 com.sun.jersey.impl.model.method.dispatch.EntityParamDispatchProvider
 
